--- a/src/main/resources/lessons/securepasswords/i18n/WebGoatLabels.properties
+++ b/src/main/resources/lessons/securepasswords/i18n/WebGoatLabels.properties
@@ -1,4 +1,4 @@
 secure-passwords.title=Secure Passwords
 securepassword-success=You have succeeded! The password is secure enough.
 securepassword-failed=You have failed! Try to enter a secure password.
-show-password=Show Password
+# show-password=Show Password
